优化模块二数据集列表与文件数统计